# PatViewer

./: CMakeLists.txt  README.md  main.cpp  patview.pro
Pattern/: CMakeLists.txt  Pattern.py
Pattern/include/: DEPFET.hpp  Pattern.hpp
Pattern/src/: Pattern.cpp
gui/: CMakeLists.txt
gui/include/: patternviewer.hpp
gui/src/: patternviewer.cpp
