cmake_minimum_required (VERSION 3.1.0)
set (EXE_NAME patview)
project (${EXE_NAME} C CXX)
set (CMAKE_CXX_STANDARD 11)
set(CMAKE_AUTOMOC ON)
#set(CMAKE_C_FLAGS "-O2 -ggdb -pthread")
#set(CMAKE_C_FLAGS_DEBUG "-O0 -ggdb")
#set(CMAKE_C_FLAGS_RELEASE "-O2 -pthread")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
#set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb")
#set(CMAKE_CXX_FLAGS_RELEASE "-O2")
add_definitions (-Wfatal-errors)
#find_package (Boost COMPONENTS program_options system timer REQUIRED)
#find_package (Boost COMPONENTS program_options system REQUIRED)
set(CMAKE_AUTOMOC ON)
find_package (Boost COMPONENTS program_options system timer REQUIRED)
find_package (Threads)
find_package (Qt5Widgets REQUIRED)
find_package(Qt5Core REQUIRED)
find_package(Qt5Declarative)
include_directories ( ${Boost_INCLUDE_DIR} 
  gui/include Pattern/include
${Qt5Widgets_INCLUDE_DIRS} )
add_subdirectory (Pattern)
add_subdirectory (gui)
add_executable (${EXE_NAME} main.cpp)
target_link_libraries( ${EXE_NAME} ${Boost_LIBRARIES} gui
    Pattern Qt5::Widgets)
